# ansible-universe-hashicorp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pymarkdown.yml  .yamllint.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTORS.rst  LICENSE.rst  README.md  galaxy.yaml  galaxy.yml  pyproject.toml
changelogs/: .gitignore  changelog.yaml  config.yaml
changelogs/fragments/: install-install_binary_only.yml  nomad_driver_podman-role.yml  nomad_handler-role.yml  nomad_install-split-client-server.yml  nomad_install-user-client-service.yml  nomad_vars-plugins_directory_variable.yml
meta/: runtime.yml
roles/consul_install/: README.md
roles/consul_install/defaults/: main.yml
roles/consul_install/meta/: main.yml
roles/consul_install/vars/: main.yml
roles/consul_service/: README.md
roles/consul_service/defaults/: main.yml
roles/consul_service/handlers/: main.yml
roles/consul_service/meta/: main.yml
roles/consul_service/tasks/: configure.yml  main.yml
roles/consul_service/vars/: main.yml
roles/consul_vars/: README.md
roles/consul_vars/defaults/: main.yml
roles/consul_vars/meta/: main.yml
roles/consul_vars/vars/: main.yml
roles/install/: README.md
roles/install/defaults/: main.yml
roles/install/handlers/: main.yml
roles/install/meta/: main.yml
roles/install/tasks/: download.yml  facts.yml  install.yml  main.yml
roles/install/vars/: main.yml
roles/nomad_driver_podman/: README.md
roles/nomad_driver_podman/defaults/: main.yml
roles/nomad_driver_podman/meta/: main.yml
roles/nomad_driver_podman/tasks/: configure.yml  main.yml
roles/nomad_driver_podman/vars/: main.yml
roles/nomad_handler/: README.md
roles/nomad_handler/handlers/: main.yml
roles/nomad_handler/meta/: main.yml
roles/nomad_install/: README.md
roles/nomad_install/handlers/: main.yml
roles/nomad_install/meta/: main.yml
roles/nomad_install/tasks/: main.yml
roles/nomad_install/vars/: main.yml
roles/nomad_job/: README.md
roles/nomad_job/defaults/: main.yml
roles/nomad_job/meta/: main.yml
roles/nomad_job/tasks/: main.yml
roles/nomad_service/: README.md
roles/nomad_service/defaults/: main.yml
roles/nomad_service/handlers/: main.yml
roles/nomad_service/meta/: main.yml
roles/nomad_service/tasks/: configure.yml  facts.yml  main.yml
roles/nomad_service/vars/: main.yml
roles/nomad_vars/: README.md
roles/nomad_vars/defaults/: main.yml
roles/nomad_vars/meta/: main.yml
(+16 files in other folders)
